applied https://github.com/daktronics/cef-mixer/blob/master/patches/shared_textures_3497.patch

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -394,6 +394,11 @@ patches = [
     'name': 'DEPS',
   },
   {
+    # Support rendering to a hardware GL/D3D texture/surface provided by the client
+    # https://bitbucket.org/chromiumembedded/cef/issues/1006
+    'name': 'external_textures_1006',
+  },
+  {
     # RTL document in <iframe> should have left-hand scrollbar.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=250514#c34
     'name': 'webkit_rtl_scrollbars_250514',
